# mpc_tracker

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: mpc_tracker.yaml  trajectory_simple_enu.yaml
include/mpc_tracker/: mpc_tracker.h  navigator_node.h
launch/: mpc_tracker.launch  navigator.launch  target_tracking.launch  traj_tracking.launch
msg/: State.msg  StateTrajectory.msg
rviz/: traj_viz.rviz
scripts/: setup.sh
src/: mpc_tracker.cpp  mpc_tracker_node.cpp  navigator_node.cpp
